# scifiweb

./: .gitignore  Cargo.toml  package.json  rustfmt.toml  scifiweb.json
auth/: Cargo.toml
auth/src/: facebook.rs  lib.rs
config/: example_config.json  example_rules.json
extras/vscode/: language-configuration.json  package.json
extras/vscode/syntaxes/: scifiweb.tmLanguage.json
http-server/: Cargo.toml
http-server/src/: error.rs  lib.rs  routes.rs
main/: config.rs  main.rs  options.rs
model/: Cargo.toml
model-mem/: Cargo.toml
model-mem/src/: cache_access.rs  lib.rs  mem_access.rs
model-mem/src/cache/: messaging.rs  mod.rs
model-postgres/: Cargo.toml
model-redis/: Cargo.toml
model/src/: collectable.rs  lib.rs
model/src/access/: event.rs  messaging.rs  mod.rs
model/src/event/: mod.rs  registry.rs  trigger.rs
model/src/instance/: collectable.rs  event.rs  group.rs  messaging.rs  mod.rs
model/src/rules/: error.rs  mod.rs
model/src/rules/collectable/: mod.rs  redemption.rs  upgrade.rs
model/src/rules/config/: json.rs  mod.rs
model/src/rules/event/: action.rs  mod.rs
router/: Cargo.toml
router/src/: builder.rs  handlers.rs  lib.rs  router.rs
src/: authorize.js  diff.rs  index.js  main.rs  match.js
src/auth/: admin.rs  facebook.rs  gamecenter.rs  googleplay.rs  mod.rs
src/comm/: mod.rs  router.rs
src/comm/http/: error.rs  mod.rs  routes.rs
src/comm/router/: builder.rs  handlers.rs  hyper.rs  mod.rs  router.rs
src/comm/ws/: mod.rs
src/instance/: collectable.rs  event.rs  group.rs  mailbox.rs  message.rs  mod.rs  notification.rs  profile.rs
src/instance/access/: mod.rs
src/instance/access/defs/: mailbox.rs  mod.rs
src/instance/access/mem/: cache_access.rs  mem_access.rs  mod.rs
src/instance/access/mem/cache/: mailbox.rs  mod.rs
src/player/: index.js  stats.js
src/rule_graph/: mod.rs
src/rule_graph/collectable/: mod.rs  redemption.rs  upgrade.rs
src/rule_graph/config/: example.json  json.rs  mod.rs
src/rule_graph/event/: action.rs  mod.rs
src/rule_graph/group/: mod.rs
src/rule_graph/profile/: mod.rs
src/rules/: mod.rs
src/rules/collectable/: mod.rs  redemption.rs
src/rules/config/: json.rs  mod.rs
src/rules/event/: mod.rs
src/rules/group/: mod.rs
src/util/: config.rs  error.rs  future.rs  json_error.rs  log.rs  mod.rs  rwlock.rs  sync.rs
util/: Cargo.toml
util/src/: cast.rs  future.rs  graph_cell.rs  later.rs  lib.rs  logger.rs  split_vec.rs  sync.rs  win_bt.rs
vm/: Cargo.toml  event-dsl.txt  test.scifi
vm/dot_scifi/: cards.scifi  chests.scifi  simple.scifi  test.scifi
vm/src/: lib.rs  macros.rs  test.rs
vm/src/ast/: macros.rs  mod.rs  var.rs
vm/src/ast/expr/: mod.rs  oper.rs  primary.rs
vm/src/ast/ty/: array.rs  collectable.rs  earlyref.rs  event.rs  function.rs  mod.rs  object.rs  user.rs
vm/src/codegen/: mod.rs
vm/src/compile/: lexer.rs  mod.rs  parser.rs  parser_rd.rs  token.rs
vm/test/: chests.scifi  noresolve.scifi
ws-server/: Cargo.toml
