[package]
name = "scifiweb"
version = "0.1.0"
authors = ["Parker Snell <parkersnell@gmail.com>"]

[dependencies]
hyper = "0.11.1"
#hyper-tls = "0.1.2"
ws = "0.7.3"
serde = "*"
serde_json = "1.0"
serde_derive = "1.0"
either = "1.1.0"
futures = "0.1.14"
#futures-cpupool = "0.1.15"
ctrlc = {version = "3.0", features = ["termination"]}
route-recognizer = "0.1.12"
url = "1.5.1"
log = "0.3.8"
termcolor = "0.3.2"
atomic = "0.3.4"
crossbeam = "0.2.10"
docopt = "0.8.1"
error-chain = "0.10.0"
clippy = {version = "*", optional = true}
fnv = "1.0.5"
#frank_jwt =
#crypto =
#tokio-redis = {git = "https://github.com/tokio-rs/tokio-redis", optional = true}
#redis-async = # see how this one develops
#tokio-postgres = {version = , optional = true}
#r2d2 = {version = , optional = true}
#tungstenite = # is this abandoned?
#websocket = # which of these three to use?
#oauth2 =
#rand =
#rayon =
#threadpool =
#chrono =
#itertools =
#toml?

[features]
default = [] #postgres, redis
lint = ["clippy"]
#postgres = ["tokio-postgres", "r2d2"]
#redis = ["tokio-redis", "r2d2"]