[package]
name = "scifiweb"
version = "0.1.0"
authors = ["Parker Snell <parkersnell@gmail.com>"]

[[bin]]
path = "main/main.rs"
name = "scifiweb"

[dependencies]
log = "0.3.8"
#sf-ws-server = {path = "ws-server"}
serde = "*"
serde_json = "1.0"
serde_derive = "1.0"
#futures-cpupool =
ctrlc = {version = "3.0", features = ["termination"]}
docopt = "0.8.1"
error-chain = "0.10.0"
#rand =
#rayon =
#threadpool =
#chrono =
#itertools =
#toml?
sf-model = {path = "model"}
sf-model-mem = {path = "model-mem"}
sf-model-postgres = {path = "model-postgres", optional = true}
sf-model-redis = {path = "model-redis", optional = true}
sf-http-server = {path = "http-server"}
sf-util = {path = "util"}
sf-vm = {path = "vm"}

[features]
#default = ["postgres", "redis"]
postgres = ["sf-model-postgres"]
redis = ["sf-model-redis"]

[workspace]
