[package]
name = "scifiweb"
version = "0.1.0"
authors = ["Parker Snell <parkersnell@gmail.com>"]

[[bin]]
path = "main/main.rs"
name = "scifiweb"

[dependencies]
log = "0.3.8"
serde = "*"
serde_json = "1.0"
serde_derive = "1.0"
#futures-cpupool =
ctrlc = {version = "3.0", features = ["termination"]}
docopt = "0.8.1"
error-chain = "0.10.0"
#rand =
#rayon =
#threadpool =
#chrono =
#itertools =
#toml?
scifi-model = {path = "model"}
scifi-model-mem = {path = "model-mem"}
scifi-model-postgres = {path = "model-postgres", optional = true}
scifi-model-redis = {path = "model-redis", optional = true}
scifi-http-server = {path = "http-server"}
#sf-ws-server = {path = "ws-server"}
scifi-util = {path = "util", features = ["custom-backtrace"]}
scifi-vm = {path = "vm"}

[features]
#default = ["postgres", "redis"]
postgres = ["scifi-model-postgres"]
redis = ["scifi-model-redis"]

[workspace]
