[package]
name = "scifi-vm"
version = "0.1.0"
authors = ["Parker Snell <parkersnell@gmail.com>"]

[dependencies]
nom = {version = "3.2.0", features = ["nightly"]}
fxhash = "0.2.1"
log = "0.3.8"
lazy_static = "0.2.8"
error-chain = "0.10.0"
serde = {version = "*", features = ["rc"]}
serde_json = "1.0"
serde_derive = "1.0"
scifi-util = {path = "../util"}
bitflags = "0.9"
